--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.lesson2" >
+    package="com.example.lesson2">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/baseline_calculate_black_20"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/baseline_calculate_black_20"
         android:supportsRtl="true"
-        android:theme="@style/MyTheme_lesson2" >
+        android:theme="@style/MyTheme_lesson2">
+
         <activity
-            android:name="Greetings"
+            android:name=".Greetings"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-
         <activity
-            android:name="Settings"
-            android:exported="true" >
-        </activity>
-
-
-
+            android:name=".Settings"
+            android:exported="true" />
         <activity
-            android:name="MainActivity"
-            android:exported="true" >
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="Calculator" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
